feat: appwriter added

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,5 @@
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
     "nativewind-env.d.ts"
-  ]
+, "src/app/(auth)/sign-up.jsx", "src/app/(auth)/_layout.tsx", "src/app/(auth)/sign-in.jsx"  ]
 }
